<resources>
    <string name="app_name">SeLeTiene_App</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Nombre del libro</string>
    <string name="save">Guardar</string>
    <string name="author">Autor</string>
    <string name="descrip">Descripción</string>
    <string name="search">Buscar</string>
    <string name="update">Actualizar</string>
    <string name="delete">Eliminar</string>
</resources>
